Fixed footer and btns on mobile view

--- a/component-library/src/app/accessibility-demo/accessibility-demo.component.scss
+++ b/component-library/src/app/accessibility-demo/accessibility-demo.component.scss
@@ -79,6 +79,7 @@
 
     @media (max-width: 979px) {
       margin-left: 40px;
+      // margin-right: 40px;
     }
 
     @media (max-width: 412px) { //set here because of the min size of the date picker
@@ -116,10 +117,17 @@
         margin-top: 64px;
 
         @media (max-width: 372px) {
-          flex-direction: column;
+          display: flex;
+          flex-direction: column-reverse;
           align-items: center;
           justify-content: space-between;
           height: 116px;
+          .btn1 {
+            width: 100%;
+          }
+          .btn2 {
+            width: 100%;
+          }
         }
       }
     }
